--- a/mylibrary/src/main/res/values/strings.xml
+++ b/mylibrary/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">qiniu-sdk</string>
+    <string name="title_activity_web_view">WebViewActivity</string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_qiniu_fullscreen">QiniuFullscreenActivity</string>
 </resources>
